--- a/client/index.html
+++ b/client/index.html
@@ -22,7 +22,7 @@
     <script src="views/AppView.js"></script>
 
     <script>
-      // $(function(){
+      $(function(){
         // set up model objects
         var library = new Songs(songData);
         var app = new AppModel({library: library});
@@ -33,7 +33,7 @@
         // put the view onto the screen
         $('body').append(appView.render());
 
-      // });
+      });
     </script>
   </body>
 </html>
